# diffusion_refiend_segmentaion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
configs/: _sweep_crag__freeze_enc=partly__use_diffusion=false__use_text_encoder=false.yaml  _sweep_crag__freeze_enc=partly__use_diffusion=false__use_text_encoder=true.yaml  _sweep_crag__freeze_enc=partly__use_diffusion=true__use_text_encoder=false.yaml  _sweep_crag__freeze_enc=partly__use_diffusion=true__use_text_encoder=true.yaml  _sweep_crag__freeze_enc=true__use_diffusion=false__use_text_encoder=false.yaml  _sweep_crag__freeze_enc=true__use_diffusion=false__use_text_encoder=true.yaml  _sweep_crag__freeze_enc=true__use_diffusion=true__use_text_encoder=false.yaml  _sweep_crag__freeze_enc=true__use_diffusion=true__use_text_encoder=true.yaml  _sweep_freeze_enc=partly__use_diffusion=false__use_text_encoder=false.yaml  _sweep_freeze_enc=partly__use_diffusion=false__use_text_encoder=true.yaml  _sweep_freeze_enc=partly__use_diffusion=true__use_text_encoder=false.yaml  _sweep_freeze_enc=partly__use_diffusion=true__use_text_encoder=true.yaml  _sweep_freeze_enc=true__use_diffusion=false__use_text_encoder=false.yaml  _sweep_freeze_enc=true__use_diffusion=false__use_text_encoder=true.yaml  _sweep_freeze_enc=true__use_diffusion=true__use_text_encoder=false.yaml  _sweep_freeze_enc=true__use_diffusion=true__use_text_encoder=true.yaml  _sweep_glas__freeze_enc=partly__use_diffusion=false__use_text_encoder=false.yaml  _sweep_glas__freeze_enc=partly__use_diffusion=false__use_text_encoder=true.yaml  crag.yaml  (+11 more)
(+94 files in other folders)
