[project]
name = "semi-t3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.2",
    "huggingface-hub>=0.36.2",
    "matplotlib>=3.10.9",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "timm>=1.0.27",
    "tokenizers>=0.15.2",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers==4.36.2",
]
